# netk

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/primitives/: ActivationFunctions.h  node.h
